// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Controls /> matches closed and locked gate snapshot  1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={false}
  >
    Unlock Gate
  </button>
  <button
    className="toggle-btn"
    disabled={true}
  >
    Open Gate
  </button>
</div>
`;

exports[`<Controls /> matches closed gate snapshot  1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={false}
  >
    Lock Gate
  </button>
  <button
    className="toggle-btn"
  >
    Open Gate
  </button>
</div>
`;
